fix couple of accessibility issues with colour contrast on main menu and skip links

--- a/src/scss/1_base/links.scss
+++ b/src/scss/1_base/links.scss
@@ -74,10 +74,10 @@ a:hover {
 
 .skip-link,
 .skip-link:visited {
-  opacity: .5;
+  opacity: .75;
   transition: opacity .3s 0s;
   color: #fff;
-  background-color: $charcoal;
+  background-color: #000;
   outline: none;
   text-align: center;
 
