--- a/src/scss/3_components/navigation/main-menu.scss
+++ b/src/scss/3_components/navigation/main-menu.scss
@@ -6,7 +6,7 @@
   position: relative;
 
   @include breakpoint($tab) {
-    padding: 0
+    padding: 0;
   }
 
   .nav {
@@ -37,7 +37,8 @@
 
     &-item {
 
-      &:first-child, :last-child {
+      &:first-child,
+      &:last-child {
         margin-top: 1rem;
         margin-bottom: 1rem;
         @include breakpoint($tab) {
@@ -128,11 +129,13 @@
     @include breakpoint($tab) {
       padding: 1.8rem 2.3rem;
     }
+
     &:focus {
       background-color: color(brand-secondary);
       border-color: color(brand-secondary);
       text-decoration: underline;
       outline: none;
+
       &:not(.is-active) {
         border: 0;
       }
@@ -141,21 +144,21 @@
 
   .is-active {
     background-color: color(brand-primary-dark);
-    border-left: 0.8rem solid $brand-secondary;
-    padding-left: 0.8rem;
+    border-left: .8rem solid $brand-secondary;
+    padding-left: .8rem;
 
     @include breakpoint($tab) {
       padding-bottom: 1.3rem;
       border-left: 0;
       padding-left: 2.3rem;
-      border-bottom: 0.5rem solid $brand-secondary;
+      border-bottom: .5rem solid $brand-secondary;
     }
   }
 
   .toggler {
     position: absolute;
     top: -5.6rem;
-    left: 0.5rem;
+    left: .5rem;
     z-index: 2;
     cursor: pointer;
     width: 5rem;
@@ -166,7 +169,7 @@
       height: 1px;
       width: 1px;
       overflow: hidden;
-      left: -0.5rem;
+      left: -.5rem;
       top: 0;
     }
 
@@ -192,12 +195,16 @@
       max-height: 60rem;
       transition: max-height 1s ease;
     }
+
+    &-label {
+      color: #fff;
+    }
   }
 
   .hamburger {
     position: absolute;
     top: -5.6rem;
-    left: 0.5rem;
+    left: .5rem;
     z-index: 1;
     width: 5rem;
     height: 5rem;
@@ -215,7 +222,7 @@
       position: relative;
       flex: none;
       width: 100%;
-      height: 0.3rem;
+      height: .3rem;
       background: #fff;
       display: flex;
       align-items: center;
@@ -228,15 +235,15 @@
         content: '';
         position: absolute;
         z-index: 1;
-        top: -0.9rem;
+        top: -.9rem;
         width: 100%;
-        height: 0.3rem;
+        height: .3rem;
         background: inherit;
       }
 
       /* Moves Line Down */
       &::after {
-        top: 0.9rem;
+        top: .9rem;
       }
     }
   }
